  * @hook/list without a <command> now shows all commands which have hooks.
    Based on a patch by Trinsec. [MG]
  * @search now takes multiple <class>=<restriction> pairs. [MG]
  * The IDLE command now takes an optional argument, which it prints back
    to the descriptor which sent the command. [MG]
  * IDLE no longer increases the cmds() for a descriptor. [MG]

Functions:
  * table() now supports <, > and - as alignment parameters to field width.
  * testlock(<boolexp>, <victim>) tests a lock without setting it.
    Suggested by Mercutio@M*U*S*H. [GM]
  * lnum() now takes a fourth argument: A step. [GM]
  * cwho() now takes an optional second argument, to control whether
    online, offline or all players are returned. Suggested by Mercutio,
    based on a patch by Ifrit. [MG]
  * room(<room>) now returns <room>, instead of #-1. Also, room(<exit>)
    returns the exit's source room, rather than the destination. Suggested
    by Null@M*U*S*H. [MG]
  * Fixed a bug in how align() strips spaces when wrapping text. Reported
    by Paige@M*U*S*H. [MG]
  * pemit(<port number>, <message>) sends <message> to the specified
    port, like @pemit/port. Suggested by Mercutio. [MG]
  * lports() and lwho() take an optional second argument to include
    connections at the login screen. Suggested by Mercutio. [MG]
  * namelist() now takes an optional #dbref/attr, called for each invalid
    name in the first argument. [MG]
  * lmath() can now do lt, lte, gt, gte, eq and neq. Also, lt(), lte(),
    etc, can all take more than 2 arguments. [GM]
  * Anyone can now use ctime() on any object. [MG]

Fixes:
 * lsearch() with invalid syntax was failing to report it as such, causing
   confusion when lsearch(me,exits) returned the same as lsearch(me). [GM]
 * fun_merge() was eating characters when ansi was present. Reported
   by Nammyung. Fixed. [GM]
 * Windows compile fixes.
 * page/port didn't evaluate its arguments properly. Reported
   by adkins@drigon.com. [SW]